--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Applied AI - Lyrics Generator</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,700i"
       rel="stylesheet"
     />
     <style>
@@ -12,10 +12,15 @@
         box-sizing: border-box;
       }
 
+      html,
+      body,
+      #app {
+        height: 100%;
+      }
+
       body {
         background: #fafafa;
         font-family: "Roboto", sans-serif;
-        height: 100%;
         margin: 0;
       }
     </style>
