feat: Speech-bubbles now align properly

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Applied AI - Lyrics Generator</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,700,700i"
+      href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,700,700i"
       rel="stylesheet"
     />
     <style>
@@ -19,8 +19,8 @@
       }
 
       body {
-        background: #fafafa;
-        font-family: "Roboto", sans-serif;
+        background: #FEECF1;
+        font-family: "Rubik", sans-serif;
         margin: 0;
       }
     </style>
