--- a/web/src/index.html
+++ b/web/src/index.html
@@ -23,6 +23,10 @@
         font-family: "Rubik", sans-serif;
         margin: 0;
       }
+
+      img {
+        object-fit: cover
+      }
     </style>
   </head>
   <body>
